Cyclic workspace and discord tilling

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -21,8 +21,6 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, UP, togglefloating,
 bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, F, fullscreen
-bind = $mainMod, S, togglespecialworkspace
-bind = $mainMod SHIFT, S, movetoworkspace, special
 # bind = $mainMod, R, exec, $menu
 # bindr = ALT, SPACE, exec, pkill wofi || $menu
 bind = $mainMod, W, exec, ~/.config/hypr/randwp.sh
@@ -49,29 +47,23 @@ bind = $mainMod SHIFT, J, movewindow, d
 bind = $mainMod SHIFT, K, movewindow, u
 bind = $mainMod SHIFT, L, movewindow, r
 
-# Switch workspaces with mainMod + [0-9]
-# bind = $hyprMod, code:34, workspace, -1
-# bind = $hyprMod, code:35, workspace, +1
-bind = $hyprMod, LEFT, workspace, -1
-bind = $hyprMod, RIGHT, workspace, +1
-bind = $subMod, 1, workspace, 1
-bind = $subMod, 2, workspace, 2
-bind = $subMod, 3, workspace, 3
-bind = $subMod, 4, workspace, 4
-bind = $subMod, 5, workspace, 5
-bind = $subMod, 6, workspace, 6
+# Switch workspaces with mainMod + [1-5]
+bind = $hyprMod, LEFT, workspace, e-1
+bind = $hyprMod, RIGHT, workspace, e+1
+bind = $subMod, 1, workspace, e~1
+bind = $subMod, 2, workspace, e~2
+bind = $subMod, 3, workspace, e~3
+bind = $subMod, 4, workspace, e~4
+bind = $subMod, 5, workspace, e~5
 
-# Move active window to a workspace with mainMod + SHIFT + [0-9]
-# bind = $hyprMod SHIFT, code:34, movetoworkspace, -1
-# bind = $hyprMod SHIFT, code:35, movetoworkspace, +1
-bind = $hyprMod SHIFT, LEFT, movetoworkspace, -1
-bind = $hyprMod SHIFT, RIGHT, movetoworkspace, +1
-bind = $subMod SHIFT, 1, movetoworkspace, 1
-bind = $subMod SHIFT, 2, movetoworkspace, 2
-bind = $subMod SHIFT, 3, movetoworkspace, 3
-bind = $subMod SHIFT, 4, movetoworkspace, 4
-bind = $subMod SHIFT, 5, movetoworkspace, 5
-bind = $subMod SHIFT, 6, movetoworkspace, 6
+# Move active window to a workspace with mainMod + SHIFT + [1-5]
+bind = $hyprMod SHIFT, LEFT, movetoworkspace, e-1
+bind = $hyprMod SHIFT, RIGHT, movetoworkspace, e+1
+bind = $subMod SHIFT, 1, movetoworkspace, e~1
+bind = $subMod SHIFT, 2, movetoworkspace, e~2
+bind = $subMod SHIFT, 3, movetoworkspace, e~3
+bind = $subMod SHIFT, 4, movetoworkspace, e~4
+bind = $subMod SHIFT, 5, movetoworkspace, e~5
 
 # Resize window using Mod Key
 
@@ -80,8 +72,8 @@ bind = $subMod SHIFT, 6, movetoworkspace, 6
 # bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-# bind = $mainMod, mouse_down, workspace, e+1
-# bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_down, workspace, e+1
+bind = $mainMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = $mainMod, mouse:272, movewindow
