--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -233,6 +233,7 @@ windowrule = float, class:.*   # Make all windows floating
 # Make some apps always tile
 windowrule = tile, initialTitle:^Zen Browser$
 windowrule = tile, class:^obsidian$
+windowrule = tile, class:^discord$
 
 # The Five Persistent Workspaces
 workspace = 1, persistent:true
