--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,6 +1,6 @@
 // -*- mode: jsonc -*-
 {
-    // "layer": "top",
+    "layer": "top",
     "position": "top",
     // "height": 30, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
@@ -8,6 +8,7 @@
     "modules-left": [
         "sway/window",
         "custom/spotify"
+        // "wlr/taskbar",
     ],
     "modules-center": [
         "hyprland/workspaces",
@@ -36,6 +37,21 @@
     // "memory": {
     //     "format": "{}% "
     // },
+    // "wlr/taskbar": {
+    //     "format": "{icon}",
+    //     "icon-size": 14,
+    //     "icon-theme": "Numix-Circle",
+    //     "tooltip-format": "{title}",
+    //     "on-click": "activate",
+    //     "on-click-middle": "close",
+    //     "app_ids-mapping": {
+    //         "firefoxdeveloperedition": "firefox-developer-edition"
+    //     },
+    //     "rewrite": {
+    //         "Firefox Web Browser": "Firefox",
+    //         "Foot Server": "Terminal"
+    //     }
+    // },
 
     // Modules configuration
     "hyprland/workspaces": {
@@ -46,9 +62,16 @@
         // "format": "{name}: {icon}",
         "format": "{icon}",
         "format-icons": {
-            "urgent": " ",
-            "active": " ", // Narrow No-break space: " "
-            "default": " "
+            // Narrow No-break space: " "
+            // "urgent": " ",
+            // "active": " ",
+            // "default": " ",
+            // "empty": " ",
+            "urgent": "",
+            "active": "",
+            "default": "",
+            "empty": "",
+
         }
     },
     "clock": {
@@ -124,15 +147,15 @@
     },
     "custom/power": {
         "format": "⏻ ",
-		"tooltip": false,
-		"menu": "on-click",
-		"menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
-		"menu-actions": {
-			"shutdown": "shutdown",
-			"reboot": "reboot",
-			"suspend": "systemctl suspend",
-			"hibernate": "systemctl hibernate"
-		}
+        "tooltip": false,
+        "menu": "on-click",
+        "menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
+        "menu-actions": {
+            "shutdown": "shutdown",
+            "reboot": "reboot",
+            "suspend": "systemctl suspend",
+            "hibernate": "systemctl hibernate"
+        }
     },
     "custom/seperator": {
         "format": " | ",
