Better ergonomic hyprland vim, tmux keybinds; dunst config finished

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -1,7 +1,7 @@
 # See https://wiki.hypr.land/Configuring/Keywords/
 $mainMod = SUPER # Sets "Windows" key as main modifier
 $subMod = SUPER
-$hyprMod = CONTROL_ALT
+$hyprMod = CTRL+ALT
 
 
 # My rules for setting new keybinds
@@ -18,66 +18,87 @@ bind = $mainMod, C, killactive,
 # bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, UP, togglefloating,
 bind = $mainMod, M, fullscreen, 1
-bind = $mainMod, F, fullscreen
-# bind = $mainMod, R, exec, $menu
-# bindr = ALT, SPACE, exec, pkill wofi || $menu
-bind = $mainMod, W, exec, ~/.config/hypr/randwp.sh
-bind = $mainMod, R, exec, sh -c 'pkill gammastep || gammastep -O 4200&'
+bind = $mainMod, F, fullscreen, 0
+
+bind = $subMod, B, exec, ~/.config/hypr/randwp.sh
+bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 4200&'
 
 
 
 # bindr = , SUPER, exec, $menu
 bind = ALT, F1, exec, pkill waybar || waybar&
+# bind = ALT, F2,
+# bind = ALT, F3,
 bind = ALT, F4, killactive,
-bind = ALT, SPACE, exec, pkill rofi || $menu
+bind = ALT, SPACE, exec, pkill rofi || rofi -show drun
 bind = ALT, TAB, cyclenext
 # bing = , F11, fullscreen
 
 
-# Move focus with mainMod + arrow keys
-bind = $mainMod, H, movefocus, l
-bind = $mainMod, J, movefocus, d
-bind = $mainMod, K, movefocus, u
-bind = $mainMod, L, movefocus, r
+# SUB + ARROW KEYS
+bind = $subMod, LEFT,  movefocus, l
+bind = $subMod, DOWN,  movefocus, d
+bind = $subMod, UP,    movefocus, u
+bind = $subMod, RIGHT, movefocus, r
 
-bind = $mainMod SHIFT, H, movewindow, l
-bind = $mainMod SHIFT, J, movewindow, d
-bind = $mainMod SHIFT, K, movewindow, u
-bind = $mainMod SHIFT, L, movewindow, r
+bind = $subMod+CTRL, LEFT,  movewindow, l
+bind = $subMod+CTRL, DOWN,  movewindow, d
+bind = $subMod+CTRL, UP,    movewindow, u
+bind = $subMod+CTRL, RIGHT, movewindow, r
 
-# Switch workspaces with mainMod + [1-5]
-bind = $hyprMod, LEFT, workspace, e-1
-bind = $hyprMod, RIGHT, workspace, e+1
+bind = $subMod+SHIFT, LEFT,  resizeactive, -20 0
+bind = $subMod+SHIFT, DOWN,  resizeactive,  0  20
+bind = $subMod+SHIFT, UP,    resizeactive,  0 -20
+bind = $subMod+SHIFT, RIGHT, resizeactive,  20 0
+
+# SUB + VIM KEYS
+bind = $subMod, H, movefocus, l
+bind = $subMod, J, movefocus, d
+bind = $subMod, K, movefocus, u
+bind = $subMod, L, movefocus, r
+
+bind = $subMod+CTRL, H, movewindow, l
+bind = $subMod+CTRL, J, movewindow, d
+bind = $subMod+CTRL, K, movewindow, u
+bind = $subMod+CTRL, L, movewindow, r
+
+bind = $subMod+SHIFT, H, resizeactive, -20 0
+bind = $subMod+SHIFT, J, resizeactive,  0  20
+bind = $subMod+SHIFT, K, resizeactive,  0 -20
+bind = $subMod+SHIFT, L, resizeactive,  20 0
+
+# SUB + NUMBER
 bind = $subMod, 1, workspace, e~1
 bind = $subMod, 2, workspace, e~2
 bind = $subMod, 3, workspace, e~3
 bind = $subMod, 4, workspace, e~4
 bind = $subMod, 5, workspace, e~5
+bind = $subMod+SHIFT, 1, movetoworkspace, e~1
+bind = $subMod+SHIFT, 2, movetoworkspace, e~2
+bind = $subMod+SHIFT, 3, movetoworkspace, e~3
+bind = $subMod+SHIFT, 4, movetoworkspace, e~4
+bind = $subMod+SHIFT, 5, movetoworkspace, e~5
 
-# Move active window to a workspace with mainMod + SHIFT + [1-5]
-bind = $hyprMod SHIFT, LEFT, movetoworkspace, e-1
-bind = $hyprMod SHIFT, RIGHT, movetoworkspace, e+1
-bind = $subMod SHIFT, 1, movetoworkspace, e~1
-bind = $subMod SHIFT, 2, movetoworkspace, e~2
-bind = $subMod SHIFT, 3, movetoworkspace, e~3
-bind = $subMod SHIFT, 4, movetoworkspace, e~4
-bind = $subMod SHIFT, 5, movetoworkspace, e~5
+# HYPR + LEFT/RIGHT
+bind = $hyprMod, LEFT, workspace, e-1
+bind = $hyprMod, RIGHT, workspace, e+1
+bind = $hyprMod+SHIFT, LEFT, movetoworkspace, e-1
+bind = $hyprMod+SHIFT, RIGHT, movetoworkspace, e+1
 
 # Resize window using Mod Key
 
 # Example special workspace (scratchpad)
-# bind = $mainMod, S, togglespecialworkspace, magic
-# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $subMod, S, togglespecialworkspace, magic
+# bind = $subMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up, workspace, e-1
+bind = $subMod, mouse_down, workspace, e+1
+bind = $subMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
+bindm = $subMod, mouse:272, movewindow
+bindm = $subMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
 bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
@@ -96,3 +117,10 @@ bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
+
+# WTF
+# bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -u low -t 1000 -r 2593 "Volume" "$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d%%\", $2*100}') $([ $(wpctl get-volume @DEFAULT_AUDIO_SINK@ | grep MUTED) ] && echo 'Muted' || echo '')"
+# bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && volume=$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d\", $2*100}'); dunstify -u low -t 1500 -r 2593 -h int:value:$volume "Volume" "${volume}%"
+# bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && volume=$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d\", $2*100}'); dunstify -u low -t 1500 -r 2593 -h int:value:$volume "Volume" "${volume}%"
+# bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%- && brightness=$(brightnessctl get | awk '{print $1}' | sed 's/%//'); max=$(brightnessctl max); percent=$((brightness * 100 / max)); dunstify -u low -t 1500 -r 2594 -h int:value:$percent "Brightness" "${percent}%"
+# bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+ && brightness=$(brightnessctl get | awk '{print $1}' | sed 's/%//'); max=$(brightnessctl max); percent=$((brightness * 100 / max)); dunstify -u low -t 1500 -r 2594 -h int:value:$percent "Brightness" "${percent}%"
