--- a/.config/tmux/copymode.conf
+++ b/.config/tmux/copymode.conf
@@ -8,18 +8,16 @@ bind -T copy-mode    C-c            send -X cancel
 bind -T copy-mode-vi C-c            send -X cancel
 
 # Movement and Navigation
-# bind -T copy-mode-vi h              send -X top-line
 bind -T copy-mode-vi h              send -X cursor-left
-bind -T copy-mode-vi j              send -X scroll-down
-bind -T copy-mode-vi k              send -X scroll-up
-# bind -T copy-mode-vi l              send -X bottom-line
+bind -T copy-mode-vi j              send -X cursor-down
+bind -T copy-mode-vi k              send -X cursor-up
 bind -T copy-mode-vi l              send -X cursor-right
 bind -T copy-mode-vi C-Up           send -X scroll-up
 bind -T copy-mode-vi C-Down         send -X scroll-down
 
 bind -T copy-mode-vi H              send -X cursor-left
-bind -T copy-mode-vi J              send -X cursor-down
-bind -T copy-mode-vi K              send -X cursor-up
+bind -T copy-mode-vi J              send -X scroll-down
+bind -T copy-mode-vi K              send -X scroll-up
 bind -T copy-mode-vi L              send -X cursor-right
 bind -T copy-mode-vi Up             send -X cursor-up
 bind -T copy-mode-vi Down           send -X cursor-down
