Added minimize feature

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -12,28 +12,26 @@ $hyprMod = CTRL+ALT
 # 3. 
 
 
-# Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
-# bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+# bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, M, fullscreen, 1
+bind = $mainMod, Z, fullscreen, 1
 bind = $mainMod, F, fullscreen, 0
 
+bind = $subMod, N, exec, ~/.config/hypr/unminimize.sh
+bind = $subMod, M, movetoworkspacesilent, special:shadow
 bind = $subMod, B, exec, ~/.config/hypr/randwp.sh
-bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 4200&'
+bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 4200&'   # 4200 even in waybar
 
 
 
-# bindr = , SUPER, exec, $menu
 bind = ALT, F1, exec, pkill waybar || waybar&
 # bind = ALT, F2,
 # bind = ALT, F3,
 bind = ALT, F4, killactive,
 bind = ALT, SPACE, exec, pkill rofi || rofi -show drun
 bind = ALT, TAB, cyclenext
-# bing = , F11, fullscreen
 
 
 # SUB + ARROW KEYS
