Volume control bash with notifications

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -19,9 +19,11 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, Z, fullscreen, 1
 bind = $mainMod, F, fullscreen, 0
 
-bind = $subMod, N, exec, ~/.config/hypr/unminimize.sh
-bind = $subMod, M, movetoworkspacesilent, special:shadow
-bind = $subMod, B, exec, ~/.config/hypr/randwp.sh
+bind = $hyprMod, UP, exec, ~/.config/hypr/scripts/unminimize.sh
+bind = $hyprMod, DOWN, movetoworkspacesilent, special:shadow
+# bind = $subMod, N, exec, ~/.config/hypr/unminimize.sh
+# bind = $subMod, M, movetoworkspacesilent, special:shadow
+bind = $subMod, B, exec, ~/.config/hypr/scripts/randwp.sh
 bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 4200&'   # 4200 even in waybar
 
 
@@ -99,15 +101,19 @@ bindm = $subMod, mouse:272, movewindow
 bindm = $subMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-bindel = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%-
-bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+
-bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
-bindl = , XF86TouchpadToggle, exec, notify-send "Please Fix F6"
+# bindle = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+# bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%- && dunstify -h int:value:"$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print $2*100}')" "Volume"
+# bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && dunstify -h int:value:"$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print $2*100}')" "Volume"
+bindle = ,XF86AudioMute, exec, ~/.config/hypr/scripts/volumecontrol.sh MUTE
+bindle = ,XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volumecontrol.sh DOWN
+bindle = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volumecontrol.sh UP
+
+bindle = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
+bindle = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+bindl  = ,XF86TouchpadToggle, exec, notify-send "Please Fix F6"
 
 unbind = ,XF86Launch1
-bindel = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
+bindle = ,XF86AudioMicMute, exec, wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 # Requires playerctl
 bindl = , XF86AudioNext, exec, playerctl next
@@ -117,6 +123,12 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 
 
 # WTF
+# bindle = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -h string:x-dunst-stack-tag:audio "Mute Toggled"
+# bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && dunstify -h string:x-dunst-stack-tag:audio -h int:value:"$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print $2*100}')" "Volume"
+# bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && dunstify -h string:x-dunst-stack-tag:audio -h int:value:"$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print $2*100}')" "Volume"
+# bindle = , XF86MonBrightnessUp, exec, brightnessctl set 5%+ && dunstify -h string:x-dunst-stack-tag:brightness -h int:value:"$(brightnessctl info | grep -oP '\(\K[^%]+')" "Brightness"
+# bindle = , XF86MonBrightnessDown, exec, brightnessctl set 5%- && dunstify -h string:x-dunst-stack-tag:brightness -h int:value:"$(brightnessctl info | grep -oP '\(\K[^%]+')" "Brightness"
+
 # bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -u low -t 1000 -r 2593 "Volume" "$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d%%\", $2*100}') $([ $(wpctl get-volume @DEFAULT_AUDIO_SINK@ | grep MUTED) ] && echo 'Muted' || echo '')"
 # bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && volume=$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d\", $2*100}'); dunstify -u low -t 1500 -r 2593 -h int:value:$volume "Volume" "${volume}%"
 # bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && volume=$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d\", $2*100}'); dunstify -u low -t 1500 -r 2593 -h int:value:$volume "Volume" "${volume}%"
