Made a better hyprland control.sh script

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -101,15 +101,12 @@ bindm = $subMod, mouse:272, movewindow
 bindm = $subMod, mouse:273, resizewindow
 
 # Laptop multimedia keys for volume and LCD brightness
-# bindle = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
-# bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%- && dunstify -h int:value:"$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print $2*100}')" "Volume"
-# bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && dunstify -h int:value:"$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print $2*100}')" "Volume"
-bindle = ,XF86AudioMute, exec, ~/.config/hypr/scripts/volumecontrol.sh MUTE
-bindle = ,XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/volumecontrol.sh DOWN
-bindle = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/volumecontrol.sh UP
+bindle = ,XF86AudioMute, exec, ~/.config/hypr/scripts/control.sh V_MUTE
+bindle = ,XF86AudioLowerVolume, exec, ~/.config/hypr/scripts/control.sh V_DOWN
+bindle = ,XF86AudioRaiseVolume, exec, ~/.config/hypr/scripts/control.sh V_UP
 
-bindle = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%-
-bindle = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+
+bindle = ,XF86MonBrightnessDown, exec, ~/.config/hypr/scripts/control.sh B_DOWN
+bindle = ,XF86MonBrightnessUp, exec, ~/.config/hypr/scripts/control.sh B_UP
 bindl  = ,XF86TouchpadToggle, exec, notify-send "Please Fix F6"
 
 unbind = ,XF86Launch1
@@ -120,17 +117,3 @@ bindl = , XF86AudioNext, exec, playerctl next
 bindl = , XF86AudioPause, exec, playerctl play-pause
 bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
-
-
-# WTF
-# bindle = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -h string:x-dunst-stack-tag:audio "Mute Toggled"
-# bindle = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && dunstify -h string:x-dunst-stack-tag:audio -h int:value:"$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print $2*100}')" "Volume"
-# bindle = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && dunstify -h string:x-dunst-stack-tag:audio -h int:value:"$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{print $2*100}')" "Volume"
-# bindle = , XF86MonBrightnessUp, exec, brightnessctl set 5%+ && dunstify -h string:x-dunst-stack-tag:brightness -h int:value:"$(brightnessctl info | grep -oP '\(\K[^%]+')" "Brightness"
-# bindle = , XF86MonBrightnessDown, exec, brightnessctl set 5%- && dunstify -h string:x-dunst-stack-tag:brightness -h int:value:"$(brightnessctl info | grep -oP '\(\K[^%]+')" "Brightness"
-
-# bindl = ,XF86AudioMute, exec, wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle && dunstify -u low -t 1000 -r 2593 "Volume" "$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d%%\", $2*100}') $([ $(wpctl get-volume @DEFAULT_AUDIO_SINK@ | grep MUTED) ] && echo 'Muted' || echo '')"
-# bindel = ,XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 5%- && volume=$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d\", $2*100}'); dunstify -u low -t 1500 -r 2593 -h int:value:$volume "Volume" "${volume}%"
-# bindel = ,XF86AudioRaiseVolume, exec, wpctl set-volume -l 1 @DEFAULT_AUDIO_SINK@ 5%+ && volume=$(wpctl get-volume @DEFAULT_AUDIO_SINK@ | awk '{printf \"%d\", $2*100}'); dunstify -u low -t 1500 -r 2593 -h int:value:$volume "Volume" "${volume}%"
-# bindel = ,XF86MonBrightnessDown, exec, brightnessctl -e4 -n2 set 5%- && brightness=$(brightnessctl get | awk '{print $1}' | sed 's/%//'); max=$(brightnessctl max); percent=$((brightness * 100 / max)); dunstify -u low -t 1500 -r 2594 -h int:value:$percent "Brightness" "${percent}%"
-# bindel = ,XF86MonBrightnessUp, exec, brightnessctl -e4 -n2 set 5%+ && brightness=$(brightnessctl get | awk '{print $1}' | sed 's/%//'); max=$(brightnessctl max); percent=$((brightness * 100 / max)); dunstify -u low -t 1500 -r 2594 -h int:value:$percent "Brightness" "${percent}%"
