--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -30,6 +30,7 @@ exec-once = waybar
 exec-once = dunst
 exec-once = swww-daemon
 exec-once = ~/.config/hypr/scripts/dynamic-borders.sh
+# exec-once = ~/.pyenv/bin/pypr --debug /tmp/pypr.log
 
 
 #############################
