--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -16,7 +16,7 @@ bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 # bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating,
-bind = $mainMod, Z, fullscreen, 1
+bind = $mainMod, M, fullscreen, 1
 bind = $mainMod, F, fullscreen, 0
 
 bind = $hyprMod, UP, exec, ~/.config/hypr/scripts/unminimize.sh
