--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -26,6 +26,10 @@ bind = $hyprMod, DOWN, movetoworkspacesilent, special:shadow
 bind = $subMod, B, exec, ~/.config/hypr/scripts/randwp.sh
 bind = $subMod, G, exec, sh -c 'pkill gammastep || gammastep -O 4200&'   # 4200 even in waybar
 
+bind = $subMod      , S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode output --mode active
+bind = $subMod+SHIFT, S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode region
+bind = $subMod+CTRL , S, exec, hyprshot -o /home/riff/Pictures/Screenshots -z --mode window --mode active
+
 
 
 bind = ALT, F1, exec, pkill waybar || waybar&
