Fixed for the new hyprland update

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -223,17 +223,27 @@ device {
 ##############################
 
 # Ignore maximize requests from apps. You'll probably like this.
-windowrule = suppressevent maximize, class:.*
+windowrule = match:class .*, suppress_event maximize
 # Fix some dragging issues with XWayland
-windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule {
+    name = fix-xwayland-drags
+    match:class = ^$
+    match:title = ^$
+    match:xwayland = true
+    match:float = true
+    match:fullscreen = false
+    match:pin = false
+
+    no_focus = true
+}
 
 # Float Rule Override
-windowrule = float, class:.*   # Make all windows floating
+windowrule = match:class .*, float on   # Make all windows floating
 
 # Make some apps always tile
-windowrule = tile, initialTitle:^Zen Browser$
-windowrule = tile, class:^obsidian$
-windowrule = tile, class:^discord$
+windowrule = match:initial_title ^Zen Browser$, tile on
+windowrule = match:class ^obsidian$, tile on
+windowrule = match:class ^discord$, tile on
 
 # The Five Persistent Workspaces
 workspace = 1, persistent:true
