--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -178,6 +178,7 @@ master {
 
 # https://wiki.hypr.land/Configuring/Variables/#misc
 misc {
+	on_focus_under_fullscreen = 1
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
     disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
