--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -89,7 +89,7 @@
     },
     "custom/gammastep": {
         "format": "{}",
-        "exec": "pgrep -x gammastep >/dev/null && echo \" \" || echo \" \"",
+        "exec": "pgrep -x gammastep >/dev/null && echo \" \" || echo \" \"",
         "on-click": "pkill gammastep || gammastep -O 4200&",   // 4200 even in hyprconf
         "interval": 2,
         // "return-type": "string",
@@ -129,10 +129,11 @@
         // "scroll-step": 1, // %, can be a float
         "format": "{volume}% {icon} {format_source}",
         "format-bluetooth": "{volume}% {icon} {format_source}",
-        "format-bluetooth-muted": " {icon} {format_source}",
+        "format-bluetooth-muted": "  {format_source}",
         "format-muted": " {format_source}",
+
         "format-source": " {volume}% ",
-        "format-source-muted": "",
+        "format-source-muted": " ",
         "format-icons": {
             "headphone": "",
             "hands-free": "󰋎",
@@ -145,7 +146,7 @@
         "on-click": "pavucontrol"
     },
     "custom/power": {
-        "format": "⏻ ",
+        "format": "⏻ ",
         "tooltip": false,
         "menu": "on-click",
         "menu-file": "$HOME/.config/waybar/power_menu.xml", // Menu file in resources folder
