--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -219,9 +219,9 @@ device {
 }
 
 
-##############################
-### WINDOWS AND WORKSPACES ###
-##############################
+################################
+### WINDOW & WORKSPACE RULES ###
+################################
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrule = match:class .*, suppress_event maximize
@@ -252,3 +252,7 @@ workspace = 2, persistent:true
 workspace = 3, persistent:true
 workspace = 4, persistent:true
 workspace = 5, persistent:true
+
+# Starup
+# https://wiki.hypr.land/Configuring/Dispatchers/#executing-with-rules
+exec-once = [workspace 1 silent; tile] alacritty
