Cleaning rofi config, adding colors.rasi and adding mode indicator

--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -36,9 +36,8 @@ bind = ALT, F1, exec, pkill waybar || waybar&
 # bind = ALT, F2,
 # bind = ALT, F3,
 bind = ALT, F4, killactive,
-bind = ALT, SPACE, exec, pkill rofi || rofi -show drun
+bind = ALT, SPACE, exec, pkill rofi || rofi -modi "drun" -show drun
 bind = ALT, TAB, cyclenext
-
 
 # SUB + ARROW KEYS
 bind = $subMod, LEFT,  movefocus, l
