Hyprland active floating windows will always be on top of all other windows

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -240,6 +240,7 @@ windowrule {
 
 # Float Rule Override
 windowrule = match:class .*, float on   # Make all windows floating
+windowrule = alterzorder top, floating:1    # All floating windows at positioned on top of all others when created or made floating
 
 # Make some apps always tile
 windowrule = match:initial_title ^Zen Browser$, tile on
