--- a/.config/hypr/keybindings.conf
+++ b/.config/hypr/keybindings.conf
@@ -3,6 +3,8 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 $subMod = SUPER
 $hyprMod = CTRL+ALT
 
+$toTop = ; alterzorder, top
+
 
 # My rules for setting new keybinds
 # 1. Keybinds modes:
@@ -15,8 +17,8 @@ $hyprMod = CTRL+ALT
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, C, killactive,
 # bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, V, togglefloating,
-bind = $mainMod, M, fullscreen, 1
+bind = $mainMod, V, togglefloating, $toTop
+bind = $mainMod, M, fullscreen, 1 
 bind = $mainMod, F, fullscreen, 0
 
 bind = $hyprMod, UP, exec, ~/.config/hypr/scripts/unminimize.sh
@@ -37,13 +39,13 @@ bind = ALT, F1, exec, pkill waybar || waybar&
 # bind = ALT, F3,
 bind = ALT, F4, killactive,
 bind = ALT, SPACE, exec, pkill rofi || rofi -modi "drun" -show drun
-bind = ALT, TAB, cyclenext
+bind = ALT, TAB, cyclenext $toTop
 
 # SUB + ARROW KEYS
-bind = $subMod, LEFT,  movefocus, l
-bind = $subMod, DOWN,  movefocus, d
-bind = $subMod, UP,    movefocus, u
-bind = $subMod, RIGHT, movefocus, r
+bind = $subMod, LEFT,  movefocus, l $toTop
+bind = $subMod, DOWN,  movefocus, d $toTop
+bind = $subMod, UP,    movefocus, u $toTop
+bind = $subMod, RIGHT, movefocus, r $toTop
 
 bind = $subMod+CTRL, LEFT,  movewindow, l
 bind = $subMod+CTRL, DOWN,  movewindow, d
@@ -56,10 +58,10 @@ bind = $subMod+SHIFT, UP,    resizeactive,  0 -20
 bind = $subMod+SHIFT, RIGHT, resizeactive,  20 0
 
 # SUB + VIM KEYS
-bind = $subMod, H, movefocus, l
-bind = $subMod, J, movefocus, d
-bind = $subMod, K, movefocus, u
-bind = $subMod, L, movefocus, r
+bind = $subMod, H, movefocus, l $toTop
+bind = $subMod, J, movefocus, d $toTop
+bind = $subMod, K, movefocus, u $toTop
+bind = $subMod, L, movefocus, r $toTop
 
 bind = $subMod+CTRL, H, movewindow, l
 bind = $subMod+CTRL, J, movewindow, d
@@ -100,8 +102,8 @@ bind = $subMod, mouse_down, workspace, e+1
 bind = $subMod, mouse_up, workspace, e-1
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
-bindm = $subMod, mouse:272, movewindow
-bindm = $subMod, mouse:273, resizewindow
+bindm = $subMod, mouse:272, movewindow $toTop
+bindm = $subMod, mouse:273, resizewindow $toTop
 
 # Laptop multimedia keys for volume and LCD brightness
 bindle = ,XF86AudioMute, exec, ~/.config/hypr/scripts/control.sh V_MUTE
