Moar rounded edges

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -81,6 +81,7 @@
     "clock#time": {
 		"justify": "center",
         "format": "{0:%I:%M %p}",
+        "tooltip-format": "time",
     },
     "clock#date": {
 		"justify": "center",
